@@ -217,7 +217,8 @@ These values may be imported with the `:keyboard` tag. Please see
 Fl contains several other widgets and other classes including:
 
 - [Fl::Box](https://metacpan.org/pod/Fl::Box)
-- [Fl::Input](https://metacpan.org/pod/Fl::Input)
+- [Fl::Input](https://metacpan.org/pod/Fl::Input) - Simple text input widget
+- [Fl::SecretInput](https://metacpan.org/pod/Fl::SecretInput) - Think 'password field'
 - [Fl::Chart](https://metacpan.org/pod/Fl::Chart)
 - [Fl::Group](https://metacpan.org/pod/Fl::Group)
 - [Fl::Window](https://metacpan.org/pod/Fl::Window)
