@@ -1,0 +1,96 @@
+=pod
+
+=head1 NAME
+
+Fl::SecretInput - Text Widget that Displays as a String of Placeholders
+
+=head1 Synopsis
+
+    use Fl;
+    my $input = Fl::SecretInput->new(0, 0, 100, 200, 'Hello, World!');
+
+=head1 Description
+
+The Fl::SecretInput class represents a widget that displays its input as a
+string of placeholders.
+
+Depending on the platform this placeholder is either the asterisk ('*') or the
+Unicode bullet character (U+2022).
+
+This subclass is usually used to receive passwords and other "secret"
+information.
+
+=head1 Methods
+
+Fl::SecretInput inherits from Fl::Input and Fl::Widget. On top of that, it
+exposes the following methods...
+
+=cut
+
+#include <FL/Fl_Secret_Input.H>
+
+MODULE = Fl::SecretInput     PACKAGE = Fl::SecretInput  PREFIX = Fl_
+
+PROTOTYPES: DISABLE
+
+=pod
+
+=head2 new(...)
+
+    my $text_a = Fl::SecretInput->new(0, 0, 250, 500, 'Important Stuff');
+    my $text_b = Fl::SecretInput->new(0, 0, 250, 500);
+
+The constructor creates a new widget using the given position, size, and
+label.
+
+The widget's boxtype is FL_DOWN_BOX by default.
+
+The destructor removes the widget.
+
+=cut
+
+Fl_Secret_Input *
+Fl_Secret_Input::new( ... )
+    CASE: (items == 5 || items == 6)
+        CODE:
+            /*(int x, int y, int w, int h, char * label = $0)*/
+            char * label = "";
+            int x = (int)SvIV(ST(1));
+            int y = (int)SvIV(ST(2));
+            int w = (int)SvIV(ST(3));
+            int h = (int)SvIV(ST(4));
+            if (items == 6) label = (char *)SvPV_nolen(ST(5));
+            RETVAL = new Fl_Secret_Input(x,y,w,h,label);
+        OUTPUT:
+            RETVAL
+
+void
+Fl_Secret_Input::DESTROY()
+    CODE:
+        int refcount = SvREFCNT(SvRV(ST(0)));
+        if (refcount == 1) {
+            delete THIS;
+        }
+        else {
+            SvREFCNT_dec(ST(0));
+        }
+
+MODULE = Fl        PACKAGE = Fl
+
+BOOT:
+    set_isa("Fl::SecretInput", "Fl::Input");
+
+=pod
+
+=head1 LICENSE
+
+Copyright (C) Sanko Robinson.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=head1 AUTHOR
+
+Sanko Robinson E<lt>sanko@cpan.orgE<gt>
+
+=cut
